Synopsis/Parsers/C/ctool/regression/reject0/run/v5.err
"my_ctool_207/regression/accept0/run/v5.c", line 5: syntax error before or at: }
"my_ctool_207/regression/accept0/run/v5.c", line 5: warning: syntax error:  empty declaration
cc: acomp failed for my_ctool_207/regression/accept0/run/v5.c
