Synopsis/Parsers/C/ctool/regression/reject0/run/v5.c

/* This is not permitted in Ansi/ISO C,
   try it with 'gcc -ansi -pedantic'. */

struct fob { };

